cabal-version:      3.0
name:               ahoj
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
copyright:          Jan Hamal Dvořák
maintainer:         mordae@anilinux.org
author:             Jan Hamal Dvořák
homepage:           https://github.com/mordae/ahoj#readme
bug-reports:        https://github.com/mordae/ahoj/issues
synopsis:           CLI UDP Chat
description:        Super simple command-line UDP chat application
category:           System
build-type:         Simple
extra-source-files: README.md

source-repository head
    type:     git
    location: https://github.com/mordae/ahoj

library
    exposed-modules:
        Network.Ahoj.Types
        Network.Ahoj.Peer

    hs-source-dirs:     lib
    default-language:   Haskell2010
    default-extensions:
        OverloadedStrings RecordWildCards BlockArguments
        ImportQualifiedPost DeriveGeneric

    ghc-options:
        -Wall -Wcompat -Wincomplete-uni-patterns -Wunused-packages
        -Wincomplete-record-updates -Widentities -Wredundant-constraints

    build-depends:
        aeson >=2.0,
        base >=4.13 && <5,
        bytestring >=0.10,
        network >=3.0,
        text >=2.0

executable ahoj
    main-is:            Main.hs
    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions:
        OverloadedStrings RecordWildCards BlockArguments
        ImportQualifiedPost DeriveGeneric FlexibleInstances

    ghc-options:
        -Wall -Wcompat -Wincomplete-uni-patterns -Wunused-packages
        -Wincomplete-record-updates -Widentities -Wredundant-constraints

    build-depends:
        ahoj,
        base >=4.13,
        haskeline >=0.8,
        text >=2.0
